# dcss-live

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
_docs/: 00-introduction.html  01-getting-started.html  02-python-101.html  03-python-102.html  04-sampling-and-survey-data.html  05-web-data-apis.html  06-web-data-scraping.html  07-audio-image-and-document-data.html  08-processing-structured-data.html  09-exploratory-data-analysis-and-visualization.html  10-association-and-latent-factors.html  11-text-as-data.html  12-text-similarity-and-latent-semantic-space.html  13-social-networks-and-relational-thinking.html  14-structural-similarity-and-latent-social-space.html  15-machine-and-statistical-learning.html  16-prediction.html  17-probability.html  18-credibility.html  19-causality.html  20-linear-regression.html  21-multilevel-regression-with-post-stratification.html  22-generalized-linear-models.html  23-causal-analysis.html  24-latent-structure-networks.html  25-latent-topics-text-lda.html  26-complex-adaptive-systems.html  27-developing-agent-based-models.html  28-artificial-neural-networks-fnn-rnn-cnn.html  29-processing-natural-language-data-spacy.html  30-transformers-self-attention.html  31-latent-topics-text-transformers.html  32-research-ethics-politics-and-practices.html  33-next-steps.html  acknowledgements.html  appendix-centrality-formulas.html  appendix-courses.html  changelog.html  custom.css  index.html  (+2 more)
book/: 00-introduction.qmd  01-getting-started.qmd  02-python-101.qmd  03-python-102.qmd  05-web-data-apis.qmd  (+97 more)
(+190 files in other folders)
